Added notification for park alarm and showing alarm time on park card

--- a/mycarpark/app/src/main/res/values/strings.xml
+++ b/mycarpark/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyCarPark</string>
+    <string name="notification_channel_name">MyCarPark Notifications</string>
+    <string name="notificaation_title">Park is expiring</string>
 </resources>
