--- a/mycarpark/app/src/main/res/values/strings.xml
+++ b/mycarpark/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MyCarPark</string>
     <string name="notification_channel_name">MyCarPark Notifications</string>
-    <string name="notificaation_title">Park is expiring</string>
+    <string name="notification_title">Park is expiring</string>
+    <string name="time_picker_text">Select parking expire time</string>
 </resources>
